--- a/index.qmd
+++ b/index.qmd
@@ -21,8 +21,8 @@ format:
 **Office Hours**:  
 
 - Sabrina  
-    - Tuesdays: 2:00–4:00 PM · 1155 Building, Room 221A *[by appointment](https://calendar.app.google/xtDH9Pnf8yJtP9jg6)*  
-    - After Class: *drop-in* 15 minutes following each class for quick questions
+    - Tuesdays: 2:00–4:00 PM · 1155 Building, Room 221A [by appointment](https://calendar.app.google/xtDH9Pnf8yJtP9jg6)  
+    - After Class: drop-in 15 minutes following each class for quick questions
 
 - Zach 
     - TBA
