--- a/index.qmd
+++ b/index.qmd
@@ -12,34 +12,29 @@ format:
 
 **Lectures**: Mondays & Wednesdays, 1:30–3:20 PM, 1155 Building E. 60th St, Room 295 
 
+<div class="my-4"></div>
+
 **Teaching Team**:  
 
 - Instructor: Sabrina Nardin (she/her) – [nardin@uchicago.edu](mailto:nardin@uchicago.edu)  
 - TA: Zach Meyer (he/him) – [zmeyer@uchicago.edu](mailto:zmeyer@uchicago.edu)
 - TA: Zixuan Zhou (she/her) – [zixuanzhou@uchicago.edu](mailto:zixuanzhou@uchicago.edu)
 
-**Office Hours**:  
+<div class="my-4"></div>
 
-- Sabrina  
-    - Tuesdays: 2:00–4:00 PM · 1155 Building, Room 221A [by appointment](https://calendar.app.google/xtDH9Pnf8yJtP9jg6)  
-    - After Class: drop-in 15 minutes following each class for quick questions
+**Office Hours (all in-person)**:
 
-- Zach 
-    - TBA
-    
-- Zixuan
-    - TBA
+| Day & Time                     | Type                                                                 | Location              | Person |
+|--------------------------------|----------------------------------------------------------------------|-----------------------|------------|
+| Mon 3:20–3:30 PM (after class) | *Drop-in (short questions)*                                          | Same as classroom     | Sabrina    |
+| Tue 2:00–4:00 PM               | [*By appointment*](https://calendar.app.google/xtDH9Pnf8yJtP9jg6)    | 1155 Bldg, Room 221A  | Sabrina    |
+| Wed 11:00 AM–12:40 PM          | [*By appointment*](https://calendar.app.google/sXeZq7QVB349yMiJ7)    | 1155 Bldg, Room 222   | Zach       |
+| Wed 12:40–1:10 PM              | *Drop-in (short questions)*                                          | 1155 Bldg, Room 222   | Zach       |
+| Wed 3:20–3:30 PM (after class) | *Drop-in (short questions)*                                          | Same as classroom     | Sabrina    |
+| Thu 1:30–3:10 PM               | [*By appointment*](https://calendar.app.google/Gt8Bci5Ciw7n1uEA8)    | 1155 Bldg, Room 222   | Zixuan     |
+| Thu 3:10–3:40 PM               | *Drop-in (short questions)*                                          | 1155 Bldg, Room 222   | Zixuan     |
 
-<!--
-  * *Monday:* Zach 1:00 - 2:30 PM (1155 Bldg, Room 226) [by appointment](https://calendar.app.google/bM8FQbxCfBNf1FdH8) and 2:30 - 3:00 PM drop-in (in-person, same location) 
-  * *Tuesday:* Sabrina 2:00 - 4:00 PM (1155 Bldg, Room 221A) [by appointment](https://calendar.app.google/M2zCrSuzquf71fLAA)
-  * *Wednesday:* Zach 10:30 - 11:30 AM drop-in [on Zoom](
-https://uchicago.zoom.us/j/9892071192?pwd=bFJjc2hrUUt5V0VwNnFVSEo1WVVoUT09)
-  * *Thursday:* Aidan 11:00 AM - 12:00 PM drop-in [on Zoom](https://uchicago.zoom.us/j/5670592166?pwd=RTB2anB6bVBzMmk1VExWMFlrTy9QQT09)
-  * *Friday:* Aidan 10:30 AM - 12:00 PM (1155 Bldg, Room 222) [by appointment](https://calendar.app.google/yNSNsS9Q9t8VwmnDA) and 12:00 to 12:30 PM drop-in [on Zoom](https://uchicago.zoom.us/j/5670592166?pwd=RTB2anB6bVBzMmk1VExWMFlrTy9QQT09)
-  * *After class:* Sabrina drop-in for lecture or homework-related questions (~15 min)
--->
-
+<div class="my-4"></div>
 
 **Quick Links**:  
 
