syllabus minor adj

--- a/syllabus.qmd
+++ b/syllabus.qmd
@@ -118,7 +118,7 @@ Make-up exams will be considered only in cases of *documented* circumstances bey
 
 #### Rubric
 
-Grades are part of the system here, but a score reflects one assignment, not your overall worth or ability. To keep grading transparent, exams will include multiple-choice and other question formats. Whenever possible, I will share correct answers afterward so you can learn from them. Assignments are evaluated using the rubric below so you know what’s expected. If you’d like more feedback—on what’s strong and what could be improved—just ask.
+Grades are part of the system here, but a score reflects one assignment, not your overall worth or ability. To keep grading transparent, exams will include multiple-choice and other question formats. Whenever possible, I will share correct answers afterward. Assignments are evaluated using the rubric below so you know what’s expected. If you’d like more feedback—on what’s strong and what could be improved—just ask.
 
 Assignments are scored as *Excellent* (roughly A+/A), *Very Good* (A-), *Good* (B/B+), *Needs Improvement* (C), or *Not Sufficient* (below C) across five categories, weighted as follows:  
 
