--- a/setup/setup-test.qmd
+++ b/setup/setup-test.qmd
@@ -43,16 +43,17 @@ It may be that Git is not installed, or RStudio cannot find it.
 
 ## Step 2: Create a New Repository on GitHub
 
-- Go to [GitHub](https://www.github.com) and log in. If you haven’t already, sign up for an account, and share your GitHub username with us using the Excel file linked in Lecture 1.
+- Go to [GitHub](https://www.github.com) and log in (If you haven’t already, sign up for an account, and share your GitHub username with us using the Excel file linked in Lecture 1)
 
 - Go to *Repositories* and click the green *New* or *New Repository* button and fill in the following:
   - *Repository name:* `myrepo`
-  - Set the repository to *Public*
+  - *Description:* you can leave it blank or add a short description of what the repo is about
+  - Set the repository visibility to *Public*
   - *Check* the box to add a *README* file
-  - *Leave the default (None)* the `.gitignore` and license
+  - *Leave the default (None)* both the `.gitignore` and the license
   - Click the green *Create repository* button
 
-- Once the repository is created, click the green *Code* button. You should see options to clone via *HTTPS* or *SSH*. If you followed the [RStudio Workbench Setup](setup-workbench.qmd) page you should have configured Git with the SSH authentication method, so copy the SSH url (which should look like `git@github.com:<OWNER>/<REPO>.git`) to your clipboard.
+- Once the repository is created, click the green *Code* button. You should see options to clone via *HTTPS* or *SSH*. Since we have configured Git with the SSH authentication method (see [RStudio Workbench Setup](setup-workbench.qmd)), copy the SSH URL (which should look like `git@github.com:<OWNER>/<REPO>.git`) to your clipboard.
 
 
 ## Step 3: Clone the New GitHub Repo via RStudio
@@ -65,7 +66,7 @@ If the Version Control option is missing, return to Step 1 to ensure RStudio can
 
 -   *Repository URL:* paste the URL of your new GitHub repository (see Step 2)
 -   *Project directory name:* it should automatically populate, do not change it. If it does not automatically populate, type the same name you gave to your GitHub repository (e.g. `myrepo`)
--   *Create project as subdirectory of:* click on "Browse..." and decide where to store the local directory for the project. It is OK to leave this test directory under Home
+-   *Create project as subdirectory of:* click on "Browse..." and decide where to store the local directory for the project. It is OK to leave this test directory under Home (no changes needed)
 -   Before proceeding, check the *Open in new session* box situated toward the bottom, as that's what you'll usually do in real life
 -   Finally, click *Create Project.* The first time you do it, you might get the following message: *"The authenticity of host 'github.com (IP)' can't be established etc."* If so:
     -   Ensure that the hash shown in the message matches one of those shown [here](https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/githubs-ssh-key-fingerprints)
@@ -76,7 +77,7 @@ If the Version Control option is missing, return to Step 1 to ensure RStudio can
 
 Your Project has been created! 
 
-Notice that your project in RStudio (e.g., Workbench) matches the one on GitHub (go to your GitHub page which should be open in your brownser and compare). The visual presentation may look different, but the files and their content should always be the same. A Project will now be:
+Look at your project in RStudio (e.g., Workbench) and the one on GitHub (go to your GitHub page which should already be open in your brownser and compare): the two should match! The visual presentation may look different, but the files and their content should always be the same. A Project will now be:
 
 -   a directory on your computer
 -   a Git repository, linked to a remote GitHub repository
@@ -97,7 +98,7 @@ It is also possibile to do the reverse setup (starting locally and connecting to
 Do this every time you finish a chunk of work, probably many times during a work session.
 :::
 
-From RStudio, check file browser panel to find the `README.md` file of your project. Open and modify it by adding the following line (or any other line):
+From RStudio, check the file browser panel to find the `README.md` file of your project. Open and modify it by adding the following line (or any other line):
     
 ```
 This is a line written from R.
@@ -106,9 +107,9 @@ This is a line written from R.
 Save your changes. Next, commit these changes to your local repo using RStudio:
 
 - Open the *Git* tab in the upper right panel
-- In the *Staged* little box, select all files you want to commit. To do this, check the boxes next to each file listed. The first time you commit, this will usually include several new files — go ahead and check all of them
+- In the *Staged* little box, select all files you want to commit. To do this, check the boxes next to each file listed. The first time you commit, this will usually include several new files: check all of them
 - Click *Commit*
-- A new window should open: in the *Commit message* box, enter a descriptive message. This should explain what you changed. For example in this case you could write something like: "Added a test line to README"
+- A new window should open: in the *Commit message* box, enter a descriptive message. This should be short but explain what you changed. For example in this case you could write something like: "Added a test line to README"
 - Click *Commit*, wait for it to finish, then click *Close*
 
 
@@ -121,8 +122,9 @@ Do this a few times a day, but less often than you commit.
 Now you have new work in your local Git repository, but the changes are not yet on GitHub:
 
 - Go to the *Git* tab: you should see a message that says *"Your branch is ahead of origin/main by 1 commit"*
-- This means you need to push your changes to GitHub: click the green *Push* arrow under the *Git* tab
-  - *If this is your first time pushing to GitHub*, you may see a prompt to add your SSH key and/or enter your GitHub username and password. If prompted, go ahead and complete the steps. When done, open your GitHub repo in a browser to confirm your changes were pushed.
+- This means you need to push your recent changes to GitHub: click the green *Push* arrow under the *Git* tab
+  - *If this is your first time pushing to GitHub*, you may see a prompt to add your SSH key and/or enter your GitHub username and password. If prompted, go ahead and complete the steps. 
+  - When done, check your GitHub repo to confirm your changes were pushed there.
   - *If this step failed* (e.g., you're unable to push), Git may not be properly configured, or you may have used the wrong authentication method (SSH or HTTPS). Check the [RStudio Workbench Setup](setup-workbench.qmd) page to troubleshoot.
 
 
@@ -165,9 +167,9 @@ Before pushing changes from your local Git repository to GitHub, you should alwa
 
 ## Step 7 (The End): Delete this Test Repo
 
-Once you're done experimenting, delete the `myrepo` repository — this was just a test, and there's no need to keep it. We need to remove it from *both* your computer (or Workbench) and GitHub:
+Once you're done experimenting, delete the `myrepo` repository — this was just a test, and there's no need to keep it. We need to remove it from *both* your computer (e.g., here Workbench) and GitHub:
 
-- *Delete the local repository*: find where you stored it on your computer (or Workbench) and delete the folder (click the red X labeled "Delete");
+- *Delete the local repository*: find where you stored it on your computer ( e.g., here Workbench) and delete the folder (click the red X labeled "Delete");
 - *Delete the repository from GitHub*:
   - Open the repository in your browser
   - Click on *Settings*
