--- a/lectures/03-home.qmd
+++ b/lectures/03-home.qmd
@@ -30,9 +30,8 @@ knitr::opts_chunk$set(echo = FALSE)
 
 ## Readings
 
-To be able to follow today's lecture, you need to read these chapters, especially Chapter 1:
-
 * [Chapter 1 "Data Visualization"](https://r4ds.hadley.nz/data-visualize) from "R for Data Science" 2nd Edition
+* [Chapter 9 "Layers"](https://r4ds.hadley.nz/layers.html) from "R for Data Science" 2nd Edition
 * [Chapter 4 "Workflow: Code Style"](https://r4ds.hadley.nz/workflow-style) from "R for Data Science" 2nd Edition 
 
 Additional Resources:
