--- a/syllabus.qmd
+++ b/syllabus.qmd
@@ -13,9 +13,11 @@ execute:
 
 <div class="my-4"></div>
 
-*Last updated: September 26, 2025*
+*Last updated: October 8, 2025 (minor typos)*
 
-<!-- *Last updated:* `r format(Sys.Date(), "%B %d, %Y")` -->
+<!-- 
+*Last updated:* `r format(Sys.Date(), "%B %d, %Y")` 
+-->
 
 ## Course Description
 
@@ -191,12 +193,12 @@ Question 2: What excited you about AI usage in the classroom or assignments?
 Question 3: Do you think AI should be allowed or banned in completing assigments?
 -->
 
-**3. Use of LLMs and AI**: AI tools are powerful and easily accessible, but building a programming foundation is work you must do yourself, even if you plan to use AI after this course. Shortcuts won’t build lasting skills: real learning takes time, effort, and struggle, but over-reliance on AI undermines this process.
+**3. Use of LLMs and AI**: AI tools are powerful and easily accessible, but building a programming foundation is work you must do yourself, even if you plan to use AI after this course. Shortcuts won’t build lasting skills: real learning takes time, effort, and struggle. I think that over-reliance on AI undermines this process.
 
-For these reasons, AI use (e.g., ChatGPT, PhoenixAI, Copilot, etc.) in assignments and final projects is strictly limited, as outlined below:
+For these reasons, AI use (e.g., ChatGPT, PhoenixAI, Copilot, etc.) in assignments and final projects is strictly limited to the uses outlined below:
 
 - *First try on your own.* Do not copy/paste prompts into AI to get preliminary solutions. You may consult AI only after at least ~15 minutes of independent effort and reviewing class materials.
-- *Use class methods and materials.* Your primary solution must use approaches taught in class (slides, book, in-class code). Alternative solutions may be included, and even encourage, but only: as additional work, properly cited, and compared against your primary solution.
+- *Use class methods and materials.* Your primary solution must use approaches taught in class (slides, book, in-class code). Alternative solutions may be included, and even encouraged, but only as additional work, properly cited, and compared against your primary solution.
 - *Disclose use.* Every assignment must include a statement, written exclusively by you (no AI-editing, etc.), describing how (if at all) you used AI, for which task, how you validated and integrated AI output with course sources, and what you learned in the process.
 - *No AI in class.* Use of AI during in-class sessions is prohibited unless explicitly authorized by the instructor. At times, we may incorporate AI examples or exercises in class as part of building AI literacy and understanding appropriate use.
 
