--- a/hw/hw02.qmd
+++ b/hw/hw02.qmd
@@ -1,5 +1,5 @@
 ---
-title: "HW02: Exploring Data"
+title: "HW02: Mass Shootings in America"
 draft: false
 ---
 
@@ -9,11 +9,9 @@ knitr::opts_chunk$set(echo = FALSE)
 
 # Overview
 
-**Due: Thursday, July 17th by 11:59 PM (Chicago Time)**
+**Due: Thursday, October 23 by 11:59 PM (Chicago Time)**
 
-In the first assignment you have demonstrated knowledge of your software setup, Git/GitHub via RStudio, and R Markdown. 
-
-The goal of this second assignment is to practice transforming and exploring data with `dplyr` and `ggplot2`.
+In the first assignment you have demonstrated knowledge of your software setup, Git/GitHub via RStudio, and R Markdown. The goal of this second assignment is to practice transforming and exploring data with `dplyr` and `ggplot2`.
 
 
 # Accessing and Cloning Your `hw02` Repository
@@ -24,7 +22,7 @@ This will work only if you have submitted your GitHub username (see Lecture 1) a
 
 **Accessing the repo:** 
 
-1. Go at [this link](https://classroom.github.com/a/F_vzVpqX) to accept the invitation and create your private `hw02` repository on GitHub. Your repository will be named `hw02-<USERNAME>` and will be ready within a few seconds. If this does not work, see the note in red above.
+1. Go at [this link](https://classroom.github.com/a/pky4Murt) to accept the invitation and create your private `hw02` repository on GitHub. Your repository will be named `hw02-<USERNAME>` and will be ready within a few seconds. If this does not work, see the note in red above.
 
 2. Once the repository has been created, click the link provided to access it.
 
@@ -38,10 +36,9 @@ This will work only if you have submitted your GitHub username (see Lecture 1) a
    - Paste the URL of your GitHub repository. To find the URL, go to your `hw02` repo on GitHub, click the green Code button, and copy the SSH or HTTPS link (use the method you configured during setup: Workbench users must select SSH).
    - The project name should auto-fill. If not, type `hw02-<USERNAME>` manually.
 
-3. Choose where to save the project directory locally.  
-   *Tip:* Use a dedicated folder such as `homeworks` to keep things organized and avoid moving folders after cloning them
+3. Choose where to save the project directory locally. *Tip:* Avoid moving folders after cloning them.  
 
-4. Check the box *"Open in new session"* (optional but recommended for keeping projects separate and organized)
+4. Check the box *"Open in new session"* (recommended for keeping projects separate and organized)
 
 5. Click *Create Project*. This will:
    - Create a new folder on your machine  
@@ -79,11 +76,11 @@ Your repository includes specific and open-ended questions. Answer all of them.
 
 ::: {.callout-note}
 
-- The questions—especially the open-ended ones—are designed to help you think like a university student and future researcher. They won’t walk you through every step but encourage you to apply what you’ve learned and work independently.
+- The questions—especially the open-ended ones—are designed to help you think like a programmer and data analyst. They won’t walk you through every step but encourage you to apply what you’ve learned and work independently. Translating what a question asks into code by breaking it down in smaller pieces is one important learning goal of this exercise
 
-- Plan to complete this over multiple sessions. Start early, and remember to save, commit, and push your work regularly.
+- This homework is designed to be completed over multiple sessions. Start early, and remember to save, commit, and push your work regularly.
 
-- Do not use AI tools to generate R code from scratch. You may use it to debug (after trying on your own) or look up how functions work (check course materials first). Only submit code you fully understand.
+- Do not use AI tools to generate R code from scratch or think for you. You may use it to debug (after trying on your own) or look up how functions work (check course materials first). Only submit code you fully understand. Reach out if you have questions, we are here to help!
 :::
 
 
@@ -91,17 +88,16 @@ Your repository includes specific and open-ended questions. Answer all of them.
 
 ### Formatting graphs
 
-While you are practicing Exploratory Data Analysis, your final graphs should be appropriate for sharing with outsiders. That means your graphs should have:
+Your final graphs should be appropriate for sharing with outsiders. That means your graphs should have:
 
 * [A title](http://r4ds.had.co.nz/graphics-for-communication.html#label)
 * Labels on the axes (type `?labs` in your Console for details)
-
-Consider adopting your own color scales, [taking control of your legends (if any)](http://www.cookbook-r.com/Graphs/Legends_(ggplot2)/), playing around with [themes](https://ggplot2.tidyverse.org/reference/index.html#section-themes), and generally customizing your graphs to improve their visual appeal and clarity.
+* Consider adopting your own color scales, [taking control of your legends (if any)](http://www.cookbook-r.com/Graphs/Legends_(ggplot2)/), playing around with [themes](https://ggplot2.tidyverse.org/reference/index.html#section-themes), and generally customizing your graphs to improve their visual appeal and clarity.
 
 
 ### Formatting tables
 
-When presenting tabular data (using `dplyr::summarize()`), consider using the `kable()` function from the `knitr` package to format the table for the final document. Here is how you use this function.
+When presenting tabular data, consider using the `kable()` function from the `knitr` package to format the table for the final document. Here is how you use this function.
 
 The code below displays a basic table summarizing where gun deaths occurred:
 ```{r packages, message = FALSE}
@@ -133,35 +129,38 @@ Run `?kable` in your Console for additional options
 
 To submit your assignment on Canvas, follow these steps:
 
-1. Before the deadline, push the final version of your work to your GitHub repository. *Tip:* don’t wait until the end to make your first commit—commit, stage, and push your work regularly as you go.
+1. Before the deadline, push the final version of your work to your GitHub repository. *Tip:* don’t wait until the end to make your first commit—commit; stage, and push your work regularly as you go.
 
    Your GitHub repository should include (make sure to stage-commit-push all these files):
    - `mass-shootings.Rmd`: main file you will work on
-   - `mass-shootings.md`: you will generate this file from the `.Rmd` by simply knitting it, like you did for HW01 (do not modify the output format)
+   - `mass-shootings.md`: you will generate this file from the `.Rmd` by simply knitting it, like you did for HW01. The output format is already set to `github_document` keep it that way unless you encounter problems, in which case you can switch to `md_document` (this is rarely needed)
    - `mass-shootings_files/`: this folder contains all the graphs that you generated in your `.Rmd`
 
 2. When you're ready to submit:
-   - Copy the URL of your GitHub repository. It will look something like: `https://github.com/csp-summer25/hw02-yourusername`
+   - Copy the URL of your GitHub repository. It will look something like: `https://github.com/css-fall25/hw02-yourusername`
    - Submit that URL on Canvas under HW02. Do not upload any files to Canvas. We only need the repository link.
 
 
 # Assessment
 
-All homework assignments are evaluated using a rubric (for more details, see the *Assessment* section of the Syllabus). Below are further guidelines for this specific homework to help you assess your work before submitting it. 
+All homework assignments are evaluated using [this rubric](https://docs.google.com/spreadsheets/d/1RAgv09Wn62X7-xsSb5bGBmEqAMFKh_om/edit?usp=sharing&ouid=112534119211880791899&rtpof=true&sd=true). For more, see the *Assessment* section of the Syllabus. 
 
-In the past, **"Excellent"** or **"Very Good"** work included submissions that:
+Below are further guidelines for this specific homework to help you assess your work before submitting it. In the past, **"Excellent"** or **"Very Good"** work included submissions that:
 
 - Completed all parts of the assignment correctly and accurately.
 - Included code that:
   - Ran without errors
   - Followed good style (clean, readable, well-organized)
   - Was well-documented but not over-commented
-  - Used appropriate complexity and matched the prompt and course content
+  - Used appropriate complexity that matched the prompt and course content
   - Demonstrated understanding of key concepts and functions
+  - Demonstrated use of class resources 
+  - Followed the course AI policies
 - Included graphs and tables that were:
   - Well-chosen for the variable types
   - Clearly labeled, visually polished, and customized beyond defaults
-  - Interpreted in a clear and concise analysis
+  - Interpreted in a clear analysis
+  - Critically interpreted, using the data to back up the points made
 - Showed strong use of:
   - Required packages, showing curiosity to use them beyond the basics
   - R Markdown syntax (e.g., no rendering errors, appropriate use of syntax, etc.)
