--- a/lectures/10-home.qmd
+++ b/lectures/10-home.qmd
@@ -3,7 +3,7 @@ title: "Lecture 10: Data Structures, Base R"
 date: 2025-10-29
 summary: "Intro to Data Structures, Data Types, and Base R"
 url_slides: 10-slides.qmd
-url_code: css-materials/base-r
+url_code: css-materials/subsetting
 page-layout: full
 draft: false
 ---
@@ -17,7 +17,7 @@ knitr::opts_chunk$set(echo = FALSE)
 * **Date**: {{< meta date >}}
 * **Topics**: {{< meta summary >}}
 * **Slides**: [View Slides]({{< meta url_slides >}})
-* **Code**: No in-class code to download
+* **Code**: `usethis::use_course("{{< meta url_code >}}")`
 
 
 ## Learning Objectives
