--- a/hw/hw03.qmd
+++ b/hw/hw03.qmd
@@ -9,22 +9,16 @@ knitr::opts_chunk$set(echo = FALSE)
 
 # Overview
 
-**Due: Thursday, July 31st by 11:59 PM (Chicago Time)**
+**Due: Thursday, November 6th by 11:59 PM (Chicago Time)**
 
-In the first assignment you have demonstrated knowledge of your software setup, Git/GitHub via RStudio, and R Markdown. In the second assignment you practiced transforming and exploring data with `dplyr` and `ggplot2`. 
-
-The goal of this final assignment is to reinforce and deepen your understanding of all these tools, with a focus on data wrangling tasks.
+In the previous assignment, you practiced working with `dplyr` and `ggplot2` using a clean and relatively small dataset. This assignment builds and expands on the previous assignment by introducing a more realistic research context in computational social science: you’ll practice cleaning, wrangling, and exploring a larger and more messy dataset.
 
 
 # Accessing and Cloning Your `hw03` Repository
 
-::: {.callout-important}
-This will work only if you have submitted your GitHub username (see Lecture 1) and accepted the email invitation to join our GitHub organization (check the email linked to your GitHub account). Make sure you’ve completed the setup under [Software Setup](../setup/index.qmd) and confirmed everything is working properly.
-:::
-
 **Accessing the repo:** 
 
-1. Go at [this link](https://classroom.github.com/a/MZni9eSL) to accept the invitation and create your private `hw03` repository on GitHub. Your repository will be named `hw03-<USERNAME>` and will be ready within a few seconds. If this does not work, see the note in red above.
+1. Go at [this link](https://classroom.github.com/a/UKzDKiqD) to accept the invitation and create your private `hw03` repository on GitHub. Your repository will be named `hw03-<USERNAME>` and will be ready within a few seconds. 
 
 2. Once the repository has been created, click the link provided to access it.
 
@@ -38,10 +32,9 @@ This will work only if you have submitted your GitHub username (see Lecture 1) a
    - Paste the URL of your GitHub repository. To find the URL, go to your `hw03` repo on GitHub, click the green Code button, and copy the SSH or HTTPS link (use the method you configured during setup: Workbench users must select SSH).
    - The project name should auto-fill. If not, type `hw03-<USERNAME>` manually.
 
-3. Choose where to save the project directory locally.  
-   *Tip:* Use a dedicated folder such as `homeworks` to keep things organized and avoid moving folders after cloning them
+3. Choose where to save the project directory locally. *Tip:* Avoid moving folders after cloning them.  
 
-4. Check the box *"Open in new session"* (optional but recommended for keeping projects separate and organized)
+4. Check the box *"Open in new session"* (recommended for keeping projects separate and organized)
 
 5. Click *Create Project*. This will:
    - Create a new folder on your machine  
@@ -56,16 +49,31 @@ See [Homework 1](hw01.qmd) for details. The workflow is the same for all assignm
 
 # Assignment Description
 
-For this assignment you will work with data from the U.S. Supreme Court. Your repository includes specific and open-ended questions. Answer all of them.
+### The U.S. Supreme Court dataset
+
+For this assignment you will work with two large datasets from the U.S. Supreme Court. 
+
+The [Supreme Court Database](http://scdb.wustl.edu/about.php) contains information on every published decision of the U.S. Supreme Court since its creation in 1791. It is one of the most widely used databases in the study of judicial politics.
+
+
+### Answer the questions
+
+Your repository includes specific and open-ended questions. Answer all of them.
 
 ::: {.callout-note}
 
-- The questions—especially the open-ended ones—are designed to help you think like a university student and future researcher. They won’t walk you through every step but encourage you to apply what you’ve learned and work independently.
+- The questions—especially the open-ended ones—are designed to help you think like a programmer and data analyst. They won’t walk you through every step but encourage you to apply what you’ve learned and work independently. Translating what a question asks into code by breaking it down in smaller pieces is one important learning goal of this exercise
 
-- Plan to complete this over multiple sessions. Start early, and remember to save, commit, and push your work regularly.
+- This homework is designed to be completed over multiple sessions—it will feel overwhelming otherwise. Start early, and remember to save, commit, and push your work regularly.
 
-- Do not use AI tools to generate R code from scratch. You may use it to debug (after trying on your own) or to look up how functions work (check course materials first). Only submit code you fully understand.
+- Do not use AI tools to generate R code from scratch or to think for you; that defeats the purpose of the assignment and violates our class policy on plagiarism. You may use AI to debug (after trying on your own) or look up how functions work (check course materials first). Only submit code you fully understand. Reach out if you have questions, we are here to help!
 :::
+
+
+# Formatting Guide
+
+See [Homework 2](hw02.qmd) for details. The formatting expectations are the same for all assignments.
+
 
 # Submit the Assignment
 
@@ -75,34 +83,18 @@ To submit your assignment on Canvas, follow these steps:
 
    Your GitHub repository should include (make sure to stage-commit-push all these files):
    - `court.Rmd`: main file you will work on
-   - `court.md`: you will generate this file from the `.Rmd` by simply knitting it, like you did for HW01 (do not modify the output format)
-   - the folder that contains all the graphs that you generated in your `.Rmd` (we need this file to be able to see your graphs and grade your homework)
+   - `court.md`: you will generate this file from the `.Rmd` by simply knitting it
+   - the folder that contains all the graphs that you generated in your `.Rmd` (we need this to be able to see your graphs and grade your homework)
 
 2. When you're ready to submit:
-   - Copy the URL of your GitHub repository. It will look something like: `https://github.com/csp-summer25/hw03-yourusername`
+   - Copy the URL of your GitHub repository. It will look something like: `https://github.com/css-fall25/hw03-yourusername`
    - Submit that URL on Canvas under HW03. Do not upload any files to Canvas. We only need the repository link.
 
 
 # Assessment
 
-All homework assignments are evaluated using a rubric (for more details, see the *Assessment* section of the Syllabus). Below are further guidelines for this specific homework to help you assess your work before submitting it. 
+All homework assignments are evaluated using [this rubric](https://docs.google.com/spreadsheets/d/1RAgv09Wn62X7-xsSb5bGBmEqAMFKh_om/edit?usp=sharing&ouid=112534119211880791899&rtpof=true&sd=true). 
 
-In the past, **"Excellent"** or **"Very Good"** work included submissions that:
+Refer to it to assess your work before submitting. For more, see the *Assessment* section of the Syllabus.
 
-- Completed all parts of the assignment correctly and accurately.
-- Included code that:
-  - Ran without errors
-  - Followed good style (clean, readable, well-organized)
-  - Was well-documented but not over-commented
-  - Used appropriate complexity and matched the prompt and course content
-  - Demonstrated understanding of key concepts and functions
-- Included graphs and tables that were:
-  - Well-chosen for the variable types
-  - Clearly labeled, visually polished, and customized beyond defaults
-  - Interpreted in a clear and concise analysis
-- Showed strong use of:
-  - Required packages, showing curiosity to use them beyond the basics
-  - R Markdown syntax (e.g., no rendering errors, appropriate use of syntax, etc.)
-- Followed good GitHub practices:
-  - Multiple informative commits showing progress over time
-  - All required files present and displaying correctly, including rendered graphs
+
